--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 # Supabase - Please fill these with your project details
-SUPABASE_URL=
+SUPABASE_URL=https://sxvharmiyhmqsfxylbth.supabase.co
 SUPABASE_SERVICE_ROLE_KEY=
 
 # Solana
